<resources>
    <string name="app_name">pl1Dadm</string>
    <string name="textQuotaion">Get a new quotation</string>
    <string name="textAbout">About</string>
    <string name="textFavouriteQuotaion">Favourite quotations</string>
    <string name="textSettings">Settings</string>
    <string name="textAboutInfo">pl1Dadm by Diego Manuel\n\ndmfuegar@inf.upv.es\n\nDevelopede for Dadm 2023</string>
    <string name="aboutDescription">App Icon</string>
    <string name="refreshDescription">Button to refresh display</string>
    <string name="welcomeMessage">Hello
%1s!,\n\nRefresh to get a new quotation\n\n(swipe down or options menu)</string>
    <string name="addDescription">Button to add in favourites</string>
    <string name="authorAnonymous">The author is anonymous. Impossible to find information</string>
    <string name="errorFindingInformation">Error. We couldn\'t find the information</string>
    <string name="DeleteAllTitle">Delete all favourite quotations</string>
    <string name="DeletaAllMessage">Do you really want to delete all quotations?</string>
    <string name="YesButton">Yes</string>
    <string name="NoButton">No</string>
    <string name="newQuotationException">Exception obtaining a new quotation</string>
    <string name="NoInternetException">There is not connection</string>
    <string name="EnglishLanguage">English</string>
    <string name="RussianLanguage">Russian</string>
    <string name="EnglishPrefix" translatable="false">en</string>
    <string name="RussianPrefix" translatable="false">ru</string>
    <string name="titleUserPreference">User Name</string>
    <string name="titleSelectorLanguage">Language Selection</string>
    <string name="hintUserPreference">Introduce a user name</string>
</resources>