<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textQuotaion"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textCita"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:justificationMode="inter_word"
                android:text="Hola"></com.google.android.material.textview.MaterialTextView>
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:justificationMode="inter_word"
                android:textStyle="italic"
                android:text="Hola"></com.google.android.material.textview.MaterialTextView>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/refreshButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/refresh"
            android:layout_gravity="bottom|end"
            android:contentDescription="@string/refreshDescription">
        </com.google.android.material.floatingactionbutton.FloatingActionButton>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/refresh"
            android:layout_gravity="bottom|end"
            android:contentDescription="@string/addDescription">
        </com.google.android.material.floatingactionbutton.FloatingActionButton>
    </FrameLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>